--- a/SampleCodeWithSplashScreen/SampleCodeWithSplashScreen.csproj
+++ b/SampleCodeWithSplashScreen/SampleCodeWithSplashScreen.csproj
@@ -9,6 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\BusinessLayer\BusinessLayer.csproj" />
     <ProjectReference Include="..\Model\Model.csproj" />
   </ItemGroup>
 
